--- a/templates/zotero.bib
+++ b/templates/zotero.bib
@@ -1,4 +1,17 @@
 
+@misc{bp_international_2020,
+	type = {Press {Release}},
+	title = {From {International} {Oil} {Company} to {Integrated} {Energy} {Company}: bp sets out strategy for decade of delivery towards net zero ambition {\textbar} {News} and insights {\textbar} {Home}},
+	shorttitle = {From {International} {Oil} {Company} to {Integrated} {Energy} {Company}},
+	url = {https://www.bp.com/en/global/corporate/news-and-insights/press-releases/from-international-oil-company-to-integrated-energy-company-bp-sets-out-strategy-for-decade-of-delivery-towards-net-zero-ambition.html},
+	language = {en},
+	urldate = {2021-03-06},
+	journal = {bp global},
+	author = {{BP}},
+	month = aug,
+	year = {2020},
+}
+
 @misc{scikit-learn_pipelines_2021,
 	title = {Pipelines and composite estimators},
 	url = {https://scikit-learn.org/stable/modules/compose.html#pipeline},
@@ -3944,19 +3957,6 @@ Publisher: Nature Publishing Group},
 	month = sep,
 	year = {2020},
 	keywords = {Alternative Energy, BP PLC, Climate Change, Fossil Fuel, Generic 1st 'CL' Future, Generic 1st 'NG' Future, Infrastructure, Investing, ROSNEFT OIL CO PJSC, Renewable Energy, business, green, markets},
-}
-
-@misc{bp_international_2020,
-	type = {Press {Release}},
-	title = {From {International} {Oil} {Company} to {Integrated} {Energy} {Company}: bp sets out strategy for decade of delivery towards net zero ambition {\textbar} {News} and insights {\textbar} {Home}},
-	shorttitle = {From {International} {Oil} {Company} to {Integrated} {Energy} {Company}},
-	url = {https://www.bp.com/en/global/corporate/news-and-insights/press-releases/from-international-oil-company-to-integrated-energy-company-bp-sets-out-strategy-for-decade-of-delivery-towards-net-zero-ambition.html},
-	language = {en},
-	urldate = {2021-03-06},
-	journal = {bp global},
-	author = {bp},
-	month = aug,
-	year = {2020},
 }
 
 @misc{total_2020_2021,
